--- a/project003/index.html
+++ b/project003/index.html
@@ -80,14 +80,14 @@
         </div>
         <div class="Awards">
             <ul>
-                <li class="on">2012 – Auditioned for YG Entertainment in Australia, became a trainee</li>
-                <li>2016 – Debuted as a member of BLACKPINK (Main Vocalist, Lead Dancer)</li>
+                <li class="on">2012 – Auditioned for YG Entertainment, became a trainee</li>
+                <li>2016 – Debuted as a member of BLACKPINK (Main Vocalist)</li>
                 <li>2018–2019 – World tours with BLACKPINK (In Your Area)</li>
-                <li>2020 – Featured in multiple global campaigns, confirmed as Saint Laurent Ambassador</li>
+                <li>2020 – Featured in multiple global campaigns</li>
                 <li>2021 – Solo Debut with single album R</li>
                 <li>2021 – Appointed as Tiffany & Co. global ambassador</li>
                 <li>2022–2023 – BLACKPINK Born Pink world tour</li>
-                <li>2024 – Continued ambassador activities (Saint Laurent, Tiffany) & fashion events</li>
+                <li>2024 – Continued ambassador activities & fashion events</li>
             </ul>
         </div>
         <div class="rose01">
@@ -129,7 +129,7 @@
                 <li>PUMA</li>
             </ul>
         </div>
-        
+
         <div class="crown">
             <img src="img/crown(2).png" alt="">
         </div>
@@ -154,11 +154,11 @@
             <article>
                 <img src="img/gallery08.jpg" alt="">
             </article>
-            <article                                                                >
-               <img src="img/gallery13.jpg" alt="">
+            <article>
+                <img src="img/gallery13.jpg" alt="">
             </article>
             <article>
-               <img src="img/gallery10.jpg" alt=""> 
+                <img src="img/gallery10.jpg" alt="">
             </article>
             <article>
                 <img src="img/gallery03.jpg" alt="">
@@ -171,13 +171,6 @@
             </article>
             <article>
                 <img src="img/gallery16.jpg" alt="">
-                <!-- <h2><a href="img/pic3.jpg">Art Work 10</a></h2>
-                <strong><img src="img/s3.jpg" alt=""></strong>
-                <p><img src="" alt=""></p>
-                <em>Artwork descroption coms here.
-                    <br>2025.09.22
-                </em>
-                <span>close</span> -->
             </article>
         </div>
         <div class="stars-container"></div>
@@ -187,7 +180,7 @@
         <div class="stars-container"></div>
         <div class="circle">
             <article class="face1">
-                <h1>Co company</h1>
+                <h1>E</h1>
                 <div class="inner">
                     <div>
 
@@ -196,7 +189,7 @@
                 </div>
             </article>
             <article class="face2">
-                <h1>What's New</h1>
+                <h1>N</h1>
                 <div class="inner">
                     <div>
                         <img src="img/roseImg3.jpg" alt="">
@@ -204,7 +197,7 @@
                 </div>
             </article>
             <article class="face3">
-                <h1>Members</h1>
+                <h1>N</h1>
                 <div class="inner">
                     <div>
                         <img src="img/roseImg01.jpg" alt="">
@@ -212,7 +205,7 @@
                 </div>
             </article>
             <article class="face4">
-                <h1>Advertisement</h1>
+                <h1>A</h1>
                 <div class="inner">
                     <div>
                         <video muted autoplay loop>
@@ -223,7 +216,7 @@
                 </div>
             </article>
             <article class="face5">
-                <h1>Vogue</h1>
+                <h1>E</h1>
                 <div class="inner">
                     <div>
 
@@ -232,7 +225,7 @@
                 </div>
             </article>
             <article class="face6">
-                <h1>Services</h1>
+                <h1>S</h1>
                 <div class="inner">
                     <div>
                         <img src="img/roseImg05.jpg" alt="">
@@ -240,7 +233,7 @@
                 </div>
             </article>
             <article class="face7">
-                <h1>Promotion</h1>
+                <h1>O</h1>
                 <div class="inner">
                     <div>
                         <img src="img/roseImg14.jpg" alt="">
@@ -248,7 +241,7 @@
                 </div>
             </article>
             <article class="face8">
-                <h1>Temperature</h1>
+                <h1>R</h1>
                 <div class="inner">
                     <div>
                         <video muted autoplay loop>
@@ -301,6 +294,9 @@
                     </button>
                     <button id="play">
                         <img src="img/player02.png" alt="">
+                    </button>
+                    <button id="pause" style="display: none;">
+                        <img src="img/pause.png" alt="">
                     </button>
                     <button id="next">
                         <img src="img/player03.png" alt="">
